# rocket-TVC

./: c++_vs_py.eps  compare_implementations.py  control.py  main.py
cpp/: CMakeLists.txt  Makefile  cpp_trajectory.csv  export_trajectory.cpp  rocket_control.cpp  rocket_control.hpp  test_control.cpp
